--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,13 +1,41 @@
 {
   "store.home": {
     "blocks": [
-      "rich-text"
+      "rich-text",
+      "info-card#padrao",
+      "info-card#blueman"
     ]
   },
   "rich-text": {
     "props": {
-      "text": "**Hello, World!**",
-      "textPosition": "CENTER"
+      "text": "*Hello, World!*",
+      "textPosition": "RIGHT"
+    }
+  },
+  "info-card#padrao": {
+    "props": {
+      "isFullModeStyle": false,
+      "textPosition": "right",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+      "headline": "Vintage Pink",
+      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+      "callToActionMode": "button",
+      "callToActionText": "Explore",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
+    }
+  },
+  "info-card#blueman": {
+    "props": {
+      "isFullModeStyle": false,
+      "textPosition": "left",
+      "imageUrl": "https://blueman.sintesesolucoes.com.br/SinB2B/Imagens/BlueMan/Login.jpg",
+      "headline": "Vintage Pink",
+      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+      "callToActionMode": "button",
+      "callToActionText": "Explore",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center"
     }
   }
 }
