--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -16,7 +16,8 @@
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center",
-      "blockClass": "left"
+      "blockClass": "vintage",
+      "blockClass": "metal"
     }
   },
   "info-card#button-right": {
