--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -16,8 +16,7 @@
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
       "textAlignment": "center",
-      "blockClass": "vintage",
-      "blockClass": "metal"
+      "blockClass": "vintage"
     }
   },
   "info-card#button-right": {
