--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -7,6 +7,7 @@
   },
   "responsive-layout.desktop#desktop": {
     "children": [
+      "rich-text#desktop",
       "image#desktop"
     ]
   },
@@ -15,6 +16,13 @@
       "rich-text#mobile",
       "image#mobile"
     ]
+  },
+  "rich-text#desktop": {
+    "props": {
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
   },
   "rich-text#mobile": {
     "props": {
