--- a/store/blocks/shelf.jsonc
+++ b/store/blocks/shelf.jsonc
@@ -8,13 +8,24 @@
             "orderBy": "OrderByTopSaleDESC",
             "paginationDotsVisibility": "desktopOnly",
             "productList": {
-                "maxItems": 8,
-                "itemsPerPage": 4,
+                "maxItems": 10,
+                "itemsPerPage": 5,
                 "minItemsPerPage": 1,
                 "scroll": "BY_PAGE",
                 "arrows": true,
                 "titleText": "Top sellers"
             }
         }
+    },
+    "product-summary.shelf": {
+        "children": [
+            "product-summary-add-to-list-button",
+            "product-summary-name",
+            "product-rating-inline",
+            "product-summary-space",
+            "product-summary-price",
+            "product-identifier.summary",
+            "product-summary-buy-button"
+        ]
     }
 }
