--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -21,7 +21,7 @@
   "flex-layout.col#right": {
     "children": [
       "product-name",
-      "product-price#preco",
+      "product-price",
       "buy-button"
     ],
     "props": {
@@ -29,7 +29,7 @@
       "preventVerticalStretch": "100%"
     }
   },
-  "product-price#preco": {
+  "product-price": {
     "props": {
       "showSavings": true,
       "showListPrice": true
