--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -25,18 +25,18 @@
       "product-identifier.product",
       "product-price",
       "flex-layout.row#qty-sku",
+      "shipping-simulator",
       "buy-button"
     ],
     "props": {
       "verticalAlign": "middle",
-      "preventVerticalStretch": "100%"
+      "preventVerticalStretch": true
     }
   },
   "flex-layout.row#qty-sku": {
     "children": [
       "sku-selector",
-      "product-quantity",
-      "shipping-simulator"
+      "product-quantity"
     ]
   },
   "product-price": {
