--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -54,7 +54,7 @@
     },
     "rich-text#home1": {
         "props": {
-            "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
+            "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances.",
             "textPosition": "CENTER",
             "font": "t-heading-3"
         }
