--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -20,7 +20,7 @@
     "tab-list.item#home1": {
         "props": {
             "tabId": "majorAppliances",
-            "label": "Major Appliances",
+            "label": "Sobre",
             "defaultActiveTab": true
         }
     },
