--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -27,7 +27,7 @@
     "tab-list.item#home2": {
         "props": {
             "tabId": "electronics",
-            "label": "Electronics"
+            "label": "Instagram"
         }
     },
     "tab-content#home": {
@@ -59,11 +59,11 @@
             "font": "t-heading-3"
         }
     },
-    "rich-text#home2": {
+    "iframe": {
         "props": {
-            "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-            "textPosition": "CENTER",
-            "font": "t-heading-3"
+            "src": "https://www.instagram.com/p/B37Zfd6FobU/embed",
+            "width": 800,
+            "heigth": 1000
         }
     },
     "flex-layout.row#about-us": {
