--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -46,7 +46,7 @@
     },
     "tab-content.item#home2": {
         "children": [
-            "rich-text#home2"
+            "iframe"
         ],
         "props": {
             "tabId": "electronics"
