--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -7,7 +7,8 @@
     },
     "image#landingbanner": {
         "props": {
-            "src": "https://storecomponents.vteximg.com.br/arquivos/box.png"
+            "src": "https://storecomponents.vteximg.com.br/arquivos/box.png",
+            "minWidth": "100%"
         }
     },
     "search-result-layout.customQuery": {
