--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -48,7 +48,7 @@
     "header-row#main-mobile": {
         "children": [
             "logo",
-            "header-spacer",
+            "header-space",
             "minicart",
             "login"
         ],
